Changed name and description

--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "src",
+  "name": "meliora-impact",
   "version": "1.0.0",
-  "description": "",
+  "description": "Student project in agile development for Meliora Impact",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
