--- a/src/package.json
+++ b/src/package.json
@@ -1,19 +1,22 @@
 {
   "name": "meliora-impact",
   "version": "1.0.0",
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "description": "Agile development project for Meliora Impact",
   "main": "index.js",
   "scripts": {
     "test": "npm run test:server",
-    "test:server": "cd src/server && npm test",
+    "test:server": "cd server && npm test",
     "dev": "concurrently npm:dev:client npm:dev:server",
-    "dev:client": "cd src/client && npm run dev",
-    "dev:server": "cd src/server && npm run dev",
+    "dev:client": "cd client && npm run dev",
+    "dev:server": "cd server && npm run dev",
     "build": "npm run build:client && npm run build:server",
-    "build:client": "cd src/client && npm run build",
-    "build:server": "cd src/server && npm run build",
+    "build:client": "cd client && npm run build",
+    "build:server": "cd server && npm run build",
     "postinstall": "npm run install:client && npm run install:server",
-    "start": "cd src/server && npm start"
+    "start": "cd server && npm start",
+    "format": "prettier --write **/*.{js,jsx}",
+    "format:check": "prettier --check **/*.{js,jsx}",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
