added some dependencies to server package json

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.16",
     "@babel/preset-env": "^7.16.11",
     "babel-jest": "^27.5.1",
+    "dotenv": "^16.0.0",
     "jest": "^27.5.1",
+    "mongodb": "^4.5.0",
+    "nodemon": "^2.0.16",
     "supertest": "^6.2.2"
   },
   "dependencies": {
