Added missing scripts

--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,8 @@
     "build:client": "cd client && npm run build",
     "build:server": "cd server && npm run build",
     "postinstall": "npm run install:client && npm run install:server",
+    "install:client": "cd client && npm install --include=dev",
+    "install:server": "cd server && npm install",
     "start": "cd server && npm start",
     "format": "prettier --write **/*.{js,jsx}",
     "format:check": "prettier --check **/*.{js,jsx}",
