--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.0",
     "jest": "^27.5.1",
     "mongodb": "^4.5.0",
+    "mongodb-memory-server": "^8.5.2",
     "nodemon": "^2.0.16",
     "supertest": "^6.2.2"
   },
