Set up UserService with mongoose, prettier format (line endings) (#11)

--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
   "homepage": "https://github.com/The-13th-reason/Meliora-Impact#readme",
   "devDependencies": {
     "concurrently": "^7.1.0",
-    "husky": "^7.0.4"
-  },
-  "dependencies": {
+    "husky": "^7.0.4",
     "prettier": "^2.6.2"
   }
 }
