--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,6 @@
     "babel-jest": "^27.5.1",
     "dotenv": "^16.0.0",
     "jest": "^27.5.1",
-    "mongodb": "^4.5.0",
     "mongodb-memory-server": "^8.5.2",
     "nodemon": "^2.0.16",
     "supertest": "^6.2.2"
@@ -26,7 +25,8 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.3.3"
   },
   "babel": {
     "presets": [
