--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,16 +5,21 @@ on:
     branches:
       - main
       - develop
+  pull_request:
+    branches:
+      - main
+      - develop
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: action/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: action/setup-node@v3
         with:
           node-version: 16.x
           cach: 'npm'
       - run: npm ci
+      - run: npm run build --if-present
       - run: npm test
