--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          cach: 'npm'
+          cache: 'npm'
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
