Correctly configured mongoose in tests, no longer hangs

--- a/server/package.json
+++ b/server/package.json
@@ -47,6 +47,8 @@
       "**/*.js",
       "!dist/**",
       "!coverage/**"
-    ]
+    ],
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": ["./__tests__/setup.js"]
   }
 }
