--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bulma": "^0.9.4",
+    "node-sass": "^7.0.1",
     "parcel": "^2.5.0"
   },
   "dependencies": {
     "@parcel/transformer-react-refresh-wrap": "^2.5.0",
+    "d3": "^7.4.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0"
   }
 }
