--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run test:server",
+    "test:coverage": "npm run test:server:coverage",
+    "test:server:coverage": "cd server && npm test -- --collectCoverage",
     "test:server": "cd server && npm test",
     "verify": "npm run verify:server && npm run format:check",
     "verify:server": "cd server && npm run verify",
