--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build --if-present
-      - run: npm run verify
+      - run: npm run test:coverage
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
